--- a/HsLogic/TODO.txt
+++ b/HsLogic/TODO.txt
@@ -7,3 +7,5 @@
 
 
 	// nie przerywac przetwarzania triggerow jesli parametr zostanie anulowany w tej samej fazie !!!
+
+	// spellDamageRelated tag?
